--- a/src/components/Section/section.module.scss
+++ b/src/components/Section/section.module.scss
@@ -1,10 +1,15 @@
+@import '../../style/costants';
+
 .mainContainer {
     box-sizing: border-box;
     margin-top: 2.5rem;
     margin-bottom: 2.5rem;
     display: flex;
     flex-direction: column;
-    gap: 16px;
+    gap: 32px;
+    @media (min-width: $tablet) {
+        gap: 16px;
+    }
 
     .title {
         font-size: 1.25rem;
